@@ -1,7 +1,8 @@
 Changes from 1.6.0 to 1.5.0
 ---------------------------
 ** Improvement
-    * [FELIX-4033] - Issue warning messages for redundant SCR annotation combinations
+    * [FELIX-4033] - Issue warning messages for redundant SCR annotation combinations and an error for declaring the service.id property
+    * [FELIX-4035] - Issue warning messages when metatype is be created, but no properties are defined
 ** Bug
     * [FELIX-4030] - Generated metatype file contains all metatype infos
     * [FELIX-3542] - Escape property values used as Metatype default values
